# Fractal-Prior-Swin-UNet

./: .gitignore  AGENTS.md  README.md  pyproject.toml  sitecustomize.py
autoresearch/: autoresearch_000.yaml  autoresearch_001.yaml  autoresearch_002.yaml  autoresearch_003.yaml  autoresearch_004.yaml  leaderboard.json  leaderboard.md  program.md  runner.py
configs/: hrf_best_tta_eval.yaml  hrf_full.yaml  hrf_smoke_cpu.yaml  hrf_tiled.yaml  hrf_v7_nca.yaml  hrf_v9_fractal_innovations.yaml  hrf_v9_smoke.yaml  smoke.yaml  smoke_fractal_cache_disk.yaml  smoke_losses_topology.yaml  smoke_nca.yaml  smoke_tiled.yaml  smoke_vessel_sampling.yaml
docs/: ARCHITECTURE.md  EXPERIMENTS.md  README.md  SPEC_SUMMARY.md  STATUS.md
fractal_swin_unet/: __init__.py
logs/: optim_sweep_results.csv
reports/: IMPLEMENTATION_CONFORMANCE.md  smoke_matrix_runs.json  smoke_matrix_summary.csv  smoke_matrix_summary.md
scripts/: audit_cldice_fix.py  compile_journal_table.py  eval_cldice_all.py  eval_cldice_xdataset.py  eval_full_metrics.sh  extract_spec.py  generate_ablation_v2.py  generate_panels.py  launch_config_I.sh  make_all_manifests.py  make_hrf_manifest.py  overfit_one_batch.sh  overnight_ablation_chain.py  overnight_baseline_control.py  overnight_chain.py  overnight_configF.py  overnight_cross_dataset.py  overnight_opt_d_v2.py  plot_pde_params.py  precompute_fractal_prior.py  precompute_multiscale_lfd.py  precompute_pde.py  restart_wrapper.sh  run_ablation_eval.py  run_ablation_smoke.sh  run_ablation_v2.sh  run_cross_dataset.sh  run_hrf_smoke.sh  run_optim_sweep.sh  (+5 more)
(+316 files in other folders)
